2006-07-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log.dai, lib/log-std.dai: Cleaned up specs.

	* Version 4.05 released.

2006-07-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry.C (initialize_layer): Don't assume array is large
	enough to hold all cells.

2006-06-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 4.04 released.

2006-06-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_file.C, source_file.h (default_hour): New parameter.

2006-06-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* select.C (check_path): Complain if fixed components are found in
	the spec.

	* lib/log-std.dai ("Field nitrogen"): Simplify 'spec' entries.

	* Version 4.03 released.

2006-06-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_std.C (load): Bug fix.  Stored values in wrong time steps.

2006-05-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry_vert.h, geometry_vert.C: New interface.
	* Makefile (SPECIALS): Add it.
	* geometry_rect.h, geometry_rect.C:
	* geometry1d.h, geometry1d.C: Derive from it.
	* uzmodel.h, uzlr.C, uznone.C, uzrichard.C: Use it.
	
2006-05-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* bioclimate_std.C (WaterDistribution): Handle pond/snow
	interaction directly.

2006-05-16  Per Abrahamsen  <abraham@dina.kvl.dk>

	* soil_heat_rect.C, soil_heat_rect.h: New submodel.
	* soil_water_rect.C, soil_water_rect.h: New submodel.
	* Makefile (SUBMODELS): Add them.

2006-05-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* soil_water.h: Removed unnecessary pure virtuals.
	* soil_heat1d.C, grounwater_pipe.C: Take 'SoilWater1D' arguments.
	
	* chemical_std.C, chemical.h (active_grounwater): Removed flag.
	* soil_chemical.C: Update caller.

	* soil_water1d.h, soil_water1d.C: Don't hide implementation in
	'Implementation' struct.

	* column_std.C, column.h: Removed functions for communication with
	external model.
	* geometry.h, geometry1d.C (cell_at): New function.
	* soil.h (horizon): New function.